# lgc-marl

./: .env  .gitignore  README.md  anyscale_job.yaml  anyscale_job_quick.yaml  pyproject.toml
configs/: default.yaml
docs/: lgc_marl_slides.pptx  training_architecture.md
lgc-marl-rware/: .gitignore  README.md  pyproject.toml
lgc-marl-rware/scripts/: evaluate.py  train.py  train_baseline.py  train_overcooked.py  train_static_graph.py
lgc-marl-rware/src/: __init__.py
lgc-marl-rware/src/environments/: __init__.py  rware_wrapper.py
lgc-marl-rware/src/evolution/: __init__.py  selection.py
lgc-marl-rware/src/graph_generation/: __init__.py  graph_types.py  llm_planner.py  overcooked_planner.py  prompts.py
lgc-marl-rware/src/lgc_marl/: __init__.py  graph_policy.py  marl_trainer.py
lgc-marl-rware/src/tracking/: weave_ops.py
lgc-marl-rware/tests/: test_graph_types.py
scripts/: replay_visualizer.py  train_baseline.py  train_baseline_quick.py  train_lgc_quick.py  train_overcooked.py  train_overcooked_parallel.py  train_overcooked_parallel_quick.py  train_static_graph.py  train_static_graph_quick.py  visualize_comparison.py
src/environments/: __init__.py  overcooked_wrapper.py  rware_wrapper.py
src/evolution/: policy_transfer.py  progressive_depth.py
src/graph_generation/: overcooked_planner.py  prompts.py
src/lgc_marl/: marl_trainer.py
src/tracking/: __init__.py  metrics.py
